--- a/javascript/index.html
+++ b/javascript/index.html
@@ -1,7 +1,7 @@
 <html>
-<head></head>
+<head><title>test</title></head>
 <body>
-<script src="script2.js">
-</script>
+<script src="test.js"></script>
+<script src="script2.js"></script>
 </body>
 </html>
