--- a/javascript/index.html
+++ b/javascript/index.html
@@ -3,5 +3,16 @@
 <body>
 <script src="test.js"></script>
 <script src="script2.js"></script>
+<h1>Tests</h1>
+<script>var expected=900;
+    assertEqual ( expected, soc1.averageSalaries(),"average salaries for company <b>"+soc1.name+"</b> should be <b>"+expected+"</b>");
+    <!--assertEqual ( 600, soc1.averageSalaries(),"average salaries for company <b>"+soc1.name+"</b> should be <b>"+600+"</b>");-->
+</script>
+
+<pre>
+<script>
+    document.write(soc1.toString())
+</script>
+</pre>
 </body>
 </html>
