add new feature and test suite

--- a/javascript/index.html
+++ b/javascript/index.html
@@ -4,47 +4,13 @@
 <script src="test.js"></script>
 <script src="script.js"></script>
 <h1>Tests</h1>
-<script>
-    testSuite("department tests",{
-        "employee Count": function(){
-          assertEqual ( "Support", soc1.departments[0].name,"first department name");
-        }
-    });
-    testSuite("company tests",{
-        before:function(){
-            soc1.name="Bonitasoft";
-        },
+<script src="spec.js"></script>
 
-        after:function(){
-            soc1.name="fgfg";
-        },
-
-
-        "company name": function(){
-          assertEqual ( "Bonitasoft", soc1.name,"check company name");
-         },
-
-
-        "employee Count": function(){
-          assertEqual ( 2, soc1.departments.length,"<b>"+soc1.name+"</b> should have <b>"+2+" departments</b>");
-         },
-          "department Count": function(){
-          assertEqual ( 2, soc1.departments.length,"<b>"+soc1.name+"</b> should have <b>"+2+" departments</b>");
-         },
-          "average salary": function(){
-          assertEqual ( 900, soc1.averageSalaries(),"average salary for company <b>"+soc1.name+"</b> should be <b>900</b>");
-         },
-
-       }
-    );
-
-
-
-</script>
 
 <pre>
 <script>
     document.write(soc1.toString())
+
 
 </script>
 </pre>
