split spec and add Employee tests

--- a/javascript/index.html
+++ b/javascript/index.html
@@ -2,10 +2,11 @@
 <head><title>test</title></head>
 <body>
 <script src="test.js"></script>
-<script src="script.js"></script>
+<script src="class/script.js"></script>
 <h1>Tests</h1>
-<script src="spec.js"></script>
-
+<script src="spec/Employee.spec.js"></script>
+<script src="spec/Department.spec.js"></script>
+<script src="spec/Company.spec.js"></script>
 
 <pre>
 <script>
