--- a/javascript/jasmine-standalone-2.3.4/SpecRunner.html
+++ b/javascript/jasmine-standalone-2.3.4/SpecRunner.html
@@ -14,9 +14,6 @@
     <script src="lib/jasmine-2.3.4/boot.js"></script>
 
     <!-- include source files here... -->
-    <!--<script src="src/Player.js"></script>-->
-    <!--<script src="src/Song.js"></script>-->
-
     <script src="../class/Employee.class.js"></script>
     <script src="../class/Department.class.js"></script>
     <script src="../class/Company.class.js"></script>
@@ -24,7 +21,8 @@
 
     <!-- include spec files here... -->
     <script src="spec/EmployeeSpec.js"></script>
-    <!--<script src="spec/PlayerSpec.js"></script>-->
+    <script src="spec/DepartmentSpec.js"></script>
+    <script src="spec/CompanySpec.js"></script>
 
 </head>
 
